# cadence-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
bot/: config.py
bot/db/: connection.py  reminders.py  schema.py
bot/handlers/: reminders.py  start.py
bot/models/: reminder.py
bot/services/: schedule_parser.py  scheduler.py
docs/: architecture.md  conventions.md  decisions.md
tests/: test_schedule_parser.py
